// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileA.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {foo} from './suppressed-libA';

foo(0);

=====================================output=====================================
// @flow

import { foo } from "./suppressed-libA";

foo(0);

================================================================================
`;

exports[`fileB.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {foo} from './suppressed-libB';

foo(0);

=====================================output=====================================
// @flow

import { foo } from "./suppressed-libB";

foo(0);

================================================================================
`;

exports[`suppressed-libB.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

// $FlowFixMe
declare export function foo(x: string): void;

=====================================output=====================================
// @flow

// $FlowFixMe
declare export function foo(x: string): void;

================================================================================
`;
